[project]
name = "comfyui_meituan_image"
description = "ComfyUI integration of the LongCat-Image pipeline"
version = "1.0.0"
license = {text = "Apache-2.0"}

dependencies = [
    "accelerate>=1.11.0",
    "diffusers>=0.35.2", 
    "transformers>=4.57.1",
    "safetensors>=0.6.2",
    "peft>=0.18.0",
    "longcat-image @ git+https://github.com/meituan-longcat/LongCat-Image.git@main",
]

[project.urls]
Repository = "https://github.com/meituan-longcat/LongCat-Image"

[tool.comfy]
PublisherId = "meituan"
DisplayName = "ComfyUI Meituan Image (LongCat)"
Icon = ""
includes = []
