[project]
name = "comfyui_meituan_image"
description = "Generate high-quality images from text prompts with excellent Chinese text rendering，Edit images using natural language instructions.."
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/xuchenxu168/comfyui_meituan_image"
"Bug Tracker" = "https://github.com/xuchenxu168/comfyui_meituan_image"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "xuchenxu168"
DisplayName = "comfyui_meituan_image"
Icon = ""
includes = []
